update css to remove duplictes, add images

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,4 @@
-<!-- FOOTER -->
-    <footer>
-      <p class="mb-0">
-        © 2025 Ace Chianni — Designed with creativity, wellness, and intention.
-      </p>
-    </footer>
+<!-- footer.html -->
+<footer class="site-footer">
+  <p class="mb-0">© 2025 Ace Chianni — Designed with creativity, wellness, and intention.</p>
+</footer>
