--- a/content.html
+++ b/content.html
@@ -2,122 +2,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- =====================================================
+       0) DOCUMENT SETUP
+  ====================================================== -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Work | Ace Chianni</title>
 
-  <!-- Bootstrap -->
+  <!-- =====================================================
+       1) VENDOR CSS
+  ====================================================== -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     crossorigin="anonymous"
   />
 
-  <!-- Fonts & Styles -->
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Caveat&family=Inter:wght@300;400;600&display=swap"
-  />
+  <!-- =====================================================
+       2) SITE CSS
+  ====================================================== -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/case-studies.css" />
   <link rel="stylesheet" href="css/web-projects.css" />
-
-  <!-- Small tweaks for modal carousel sizing -->
-  <style>
-    .project-modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 1050;
-      justify-content: center;
-      align-items: center;
-      padding: 1.5rem;
-    }
-    .project-modal.active {
-      display: flex;
-    }
-    .project-modal .modal-content {
-      background: #111827;
-      color: #f9fafb;
-      max-width: 960px;
-      width: 100%;
-      max-height: 90vh;
-      overflow-y: auto;
-      border-radius: 0.75rem;
-      padding: 1.75rem;
-      position: relative;
-    }
-    .project-modal .modal-close {
-      position: absolute;
-      top: 0.75rem;
-      right: 1rem;
-      font-size: 1.75rem;
-      cursor: pointer;
-      line-height: 1;
-    }
-    .carousel-wrapper {
-      max-width: 820px;
-      margin: 0 auto;
-    }
-    .modal-slide-img {
-      max-height: 420px;
-      object-fit: contain;
-    }
-    .slide-caption {
-      font-size: 0.95rem;
-      color: #d1d5db;
-    }
-    .carousel-caption {
-      background: rgba(15, 23, 42, 0.7);
-      border-radius: 0.5rem;
-      padding: 0.75rem 1rem;
-    }
-    .carousel-indicators [data-bs-target] {
-      background-color: #f9fafb;
-    }
-    .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-      filter: invert(1);
-    }
-
-    /* Lightbox overlay for Photoshop pieces */
-    .lightbox {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.8);
-      z-index: 1040;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem;
-    }
-    .lightbox.active {
-      display: flex;
-    }
-    .lightbox img {
-      max-width: 90vw;
-      max-height: 90vh;
-      object-fit: contain;
-      border-radius: 0.75rem;
-      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.7);
-    }
-  </style>
 </head>
 
 <body>
-  <!-- NAVBAR -->
+  <!-- =====================================================
+       NAVBAR (Injected via script.js)
+  ====================================================== -->
   <div id="navbar-placeholder"></div>
 
-  <!-- PAGE HEADER -->
+  <!-- =====================================================
+       PAGE HEADER
+  ====================================================== -->
   <header class="text-center my-5">
     <h1>Case Studies &amp; Creative Works</h1>
     <p class="lead">Exploring design, storytelling, and digital craftsmanship.</p>
   </header>
 
-  <!-- ============================= -->
-  <!-- CASE STUDY GRID (Photoshop / Art) -->
-  <!-- ============================= -->
+  <!-- =====================================================
+       1) CASE STUDIES 
+  ====================================================== -->
   <main class="case-grid container py-5">
     <!-- Case Study 1 -->
     <article class="case-card fade-section">
@@ -125,6 +50,7 @@
         <img
           src="images/movieposter.jpg"
           alt="Minimalist Beauty and the Beast poster"
+          loading="lazy"
         />
         <span class="case-tag">Photoshop · Typography</span>
       </div>
@@ -154,6 +80,7 @@
         <img
           src="images/postcard.jpg"
           alt="Retro travel postcard for Tokyo, Japan"
+          loading="lazy"
         />
         <span class="case-tag">Photoshop · Vintage Design</span>
       </div>
@@ -181,7 +108,8 @@
       <div class="case-image">
         <img
           src="images/trick.jpg"
-          alt="Trompe l'oeil photo manipulation showing back as a guitar"
+          alt="Trompe l'oeil photo manipulation showing a back as a guitar"
+          loading="lazy"
         />
         <span class="case-tag">Digital Art · Conceptual Design</span>
       </div>
@@ -207,7 +135,7 @@
     <!-- Case Study 4 -->
     <article class="case-card fade-section">
       <div class="case-image">
-        <img src="images/BBlogo.jpg" alt="Brunch Babes logo" />
+        <img src="images/BBlogo.jpg" alt="Brunch Babes logo" loading="lazy" />
         <span class="case-tag">Brand Identity · Illustration</span>
       </div>
       <div class="case-content">
@@ -223,18 +151,22 @@
           The work includes logo exploration, wordmark refinement, and early
           applications across social and packaging touchpoints.
         </p>
+
         <div class="case-gallery mt-3">
           <img
             src="images/BB-sketches.png"
             alt="Brunch Babes initial logo sketches"
             class="thumb-img"
+            loading="lazy"
           />
           <img
             src="images/BBlogo.jpg"
             alt="Brunch Babes logo concept"
             class="thumb-img"
+            loading="lazy"
           />
         </div>
+
         <div class="case-meta mt-2">
           <span>Tools: Adobe Photoshop</span>
           <span>Focus: Identity Exploration · Illustration · Brand Story</span>
@@ -243,9 +175,9 @@
     </article>
   </main>
 
-  <!-- ============================= -->
-  <!-- CASE STUDY IMAGE LIGHTBOX    -->
-  <!-- ============================= -->
+  <!-- =====================================================
+       2) LIGHTBOX
+  ====================================================== -->
   <div
     id="lightbox"
     class="lightbox"
@@ -256,9 +188,9 @@
     <img id="lightbox-img" src="" alt="Expanded project artwork" />
   </div>
 
-  <!-- ============================= -->
-  <!-- WEB PROJECTS & UX/UI BUILDS  -->
-  <!-- ============================= -->
+  <!-- =====================================================
+       3) WEB PROJECTS & UX/UI BUILDS
+  ====================================================== -->
   <section id="web-projects" class="fade-section container py-5">
     <h2 class="text-center mb-4">Web Projects &amp; UX/UI Builds</h2>
     <p class="text-center mb-5 lead">
@@ -267,12 +199,13 @@
     </p>
 
     <div class="web-grid">
-      <!-- PROJECT 1: AnniiMe Finder -->
+      <!-- Project 1: AnniiMe Finder -->
       <article class="web-card">
         <div class="web-image">
           <img
             src="images/anniime/home-light.jpg"
             alt="AnniiMe Finder home page preview"
+            loading="lazy"
           />
           <span class="web-tag">Front-End · API Integration</span>
         </div>
@@ -288,25 +221,31 @@
             My focus was on reducing decision fatigue for beginners by turning a
             vast, overwhelming catalog into a structured, mood-driven experience.
           </p>
+
           <div class="web-meta">
             <span>Tools: React · JavaScript · Jikan API</span>
           </div>
+
           <a href="#" class="btn-web" data-project="anniime">View Case Study</a>
         </div>
       </article>
 
-      <!-- PROJECT 2: Inkspresso -->
+      <!-- Project 2: Inkspresso -->
       <article class="web-card">
         <div class="web-image">
           <img
             src="images/inkspresso/dashboard.png"
             alt="Inkspresso dashboard preview"
+            loading="lazy"
           />
           <span class="web-tag">Full-Stack · eCommerce</span>
         </div>
 
         <div class="web-content">
-          <h3>Inkspresso <small class="text-muted">— Fuel Your Imagination</small></h3>
+          <h3>
+            Inkspresso <small class="text-muted">— Fuel Your Imagination</small>
+          </h3>
+
           <p>
             A cozy café-inspired eCommerce and digital library concept that
             merges books, brews, and mindful browsing. Users can explore drinks,
@@ -317,19 +256,22 @@
             building REST endpoints, and crafting a dark-mode friendly interface
             for longer reading and browsing sessions.
           </p>
+
           <div class="web-meta">
             <span>Tools: Node.js · Express · MongoDB</span>
           </div>
+
           <a href="#" class="btn-web" data-project="inkspresso">View Case Study</a>
         </div>
       </article>
 
-      <!-- PROJECT 3: Inkspression -->
+      <!-- Project 3: Inkspression -->
       <article class="web-card">
         <div class="web-image">
           <img
             src="images/inkspression/dashboard.jpg"
             alt="Inkspression journaling dashboard"
+            loading="lazy"
           />
           <span class="web-tag">UX/UI · Productivity App</span>
         </div>
@@ -347,84 +289,91 @@
             calmer, more forgiving interfaces for users who don’t fit
             one-size-fits-all productivity tools.
           </p>
+
           <div class="web-meta">
             <span>Tools: React · TailwindCSS · Firebase</span>
           </div>
+
           <a href="#" class="btn-web" data-project="inkspression">View Case Study</a>
         </div>
       </article>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECT MODAL (CAROUSEL PER PROJECT) -->
-  <!-- ============================= -->
+  <!-- =====================================================
+       4) PROJECT MODAL (Bootstrap Carousel)
+  ====================================================== -->
   <div
-    id="project-modal"
-    class="project-modal"
-    aria-modal="true"
-    role="dialog"
-    aria-hidden="true"
-    aria-label="Web project detail"
-  >
-    <div class="modal-content">
-      <span class="modal-close" aria-label="Close project view">&times;</span>
+  id="project-modal"
+  class="project-modal"
+  aria-modal="true"
+  role="dialog"
+  aria-hidden="true"
+  aria-labelledby="modal-title"
+  tabindex="-1"
+>
+  <div class="modal-content" role="document">
+    <span class="modal-close" aria-label="Close project view" role="button" tabindex="0">&times;</span>
 
-      <div class="carousel-wrapper">
-        <div
-          id="projectCarousel"
-          class="carousel slide"
-          data-bs-ride="false"
-          data-bs-interval="false"
-        >
-          <div class="carousel-indicators" id="project-carousel-indicators">
-            <!-- dots injected via JS -->
-          </div>
-
-          <div class="carousel-inner" id="project-carousel-inner">
-            <!-- slides injected via JS -->
-          </div>
-
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#projectCarousel"
-            data-bs-slide="prev"
-          >
-            <span
-              class="carousel-control-prev-icon"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#projectCarousel"
-            data-bs-slide="next"
-          >
-            <span
-              class="carousel-control-next-icon"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+    <div class="carousel-wrapper">
+      <div
+        id="projectCarousel"
+        class="carousel slide"
+        data-bs-ride="false"
+        data-bs-interval="false"
+        tabindex="0"
+        aria-label="Project screenshots carousel"
+      >
+        <div class="carousel-indicators" id="project-carousel-indicators">
+          <!-- injected via JS -->
         </div>
-      </div>
 
-      <div class="modal-text mt-4">
-        <h3 id="modal-title"></h3>
-        <p id="slide-caption" class="slide-caption mb-2"></p>
-        <p id="modal-description" class="mb-2"></p>
-        <div id="modal-meta" class="modal-meta"></div>
+        <div class="carousel-inner" id="project-carousel-inner">
+          <!-- injected via JS -->
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#projectCarousel"
+          data-bs-slide="prev"
+          aria-label="Previous slide"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#projectCarousel"
+          data-bs-slide="next"
+          aria-label="Next slide"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
-  </div>
 
-  <!-- FOOTER -->
+    <div class="modal-text mt-4">
+      <h3 id="modal-title"></h3>
+      <p id="slide-caption" class="slide-caption mb-2"></p>
+      <p id="modal-description" class="mb-2"></p>
+      <div id="modal-meta" class="modal-meta"></div>
+    </div>
+  </div>
+</div>
+
+
+  <!-- =====================================================
+       FOOTER
+  ====================================================== -->
   <div id="footer-placeholder"></div>
 
-  <!-- SCRIPTS -->
+  <!-- =====================================================
+       SCRIPTS
+  ====================================================== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
