--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact & Rates</title>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
+    crossorigin="anonymous"
   />
 
-  <!-- Fonts & Styles -->
+  <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&family=Inter:wght@300;400;600&display=swap">
+
+  <!-- Site Styles -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -21,7 +24,7 @@
   <!-- NAVIGATION -->
   <div id="navbar-placeholder"></div>
 
-  <div class="container py-5">
+  <main class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
 
@@ -54,12 +57,14 @@
           <div id="errorMessage" class="alert alert-danger mt-3 d-none">
             Something went wrong. Please try again later.
           </div>
-
         </form>
 
       </div>
     </div>
-  </div>
+  </main>
+
+  <!-- FOOTER -->
+  <div id="footer-placeholder"></div>
 
   <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -90,7 +95,10 @@
     });
   </script>
 
-  <script src="script.js"></script>
+  <!-- Bootstrap JS (required for navbar toggler) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Site JS -->
+  <script src="script.js"></script>
 </body>
 </html>
