reposition my about sections, some title edits

--- a/content.html
+++ b/content.html
@@ -74,14 +74,14 @@
         <div class="web-image">
           <img
             src="images/anniime/home-light.jpg"
-            alt="AnniiMe Finder home page preview"
+            alt="Anime Finder home page preview"
             loading="lazy"
           />
           <span class="web-tag">Front-End · Onboarding UX</span>
         </div>
 
         <div class="web-content">
-          <h3>AnniiMe Finder</h3>
+          <h3>Anime Finder</h3>
           <p class="mb-2">
             An anime discovery flow that reduces decision fatigue through a guided quiz, curated results,
             and mood-based recommendation logic.
