--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- HERO -->
   <header class="hero" role="banner">
     <div class="container-narrow">
-      <p class="hero-eyebrow">UX/UI • Product Design • Wellness / Mental Health</p>
+      <p class="hero-eyebrow">UX/UI • Product Design • Holistic Health & Wellness</p>
 
       <h1 class="hero-title">Calm digital experiences for real human needs.</h1>
 
