update some language for better positioning

--- a/content.html
+++ b/content.html
@@ -30,102 +30,101 @@
       UX/UI case studies + calm digital experiences, with visual storytelling in the details.
     </p>
   </header>
-
-  <!-- =====================================================
+<!-- =====================================================
        1) FEATURED UX / PRODUCT CASE STUDIES
-  ====================================================== -->
-  <section class="container py-4" aria-label="Featured UX case studies">
-    <h2 class="text-center mb-3">Featured UX / Product Case Studies</h2>
-    <p class="text-center mb-4 text-muted">
-      These are the projects where I owned the UX thinking, interface decisions, and product flow.
-    </p>
+====================================================== -->
+<section class="container py-4" aria-label="Featured UX case studies">
+  <h2 class="text-center mb-3">Featured UX / Product Case Studies</h2>
+  <p class="text-center mb-4 text-muted">
+    Selected work highlighting product thinking, UX strategy, and interaction design.
+  </p>
 
-    <div class="web-grid">
-      <!-- Featured 1 -->
-      <article class="web-card">
-        <div class="web-image">
-          <img
-            src="images/inkspression/dashboard.jpg"
-            alt="Inkspression journaling dashboard"
-            loading="lazy"
-          />
-          <span class="web-tag">UX/UI · Neurodivergent-friendly</span>
+  <div class="web-grid">
+
+    <!-- Inkspression -->
+    <article class="web-card">
+      <div class="web-image">
+        <img
+          src="images/inkspression/dashboard.jpg"
+          alt="Inkspression journaling dashboard"
+          loading="lazy"
+        />
+        <span class="web-tag">UX/UI · Neurodivergent-Friendly</span>
+      </div>
+
+      <div class="web-content">
+        <h3>Inkspression</h3>
+        <p class="mb-2">
+          A neurodivergent-friendly journaling and productivity app designed to reduce overwhelm
+          through gentle structure, emotional check-ins, and low-cognitive-load design.
+        </p>
+
+        <div class="web-meta">
+          <span><strong>Role:</strong> UX/UI, IA, Interaction Design</span><br />
+          <span><strong>Tools:</strong> React · TailwindCSS · Firebase</span>
         </div>
 
-        <div class="web-content">
-          <h3>Inkspression</h3>
-          <p class="mb-2">
-            Gentle journaling + productivity built to reduce overwhelm using focus modes, low-cognitive-load layouts,
-            and emotional check-ins.
-          </p>
+        <a href="#" class="btn-web" data-project="inkspression">View Case Study</a>
+      </div>
+    </article>
 
-          <div class="web-meta">
-            <span><strong>Role:</strong> UX/UI, IA, interaction design</span><br />
-            <span><strong>Tools:</strong> React · TailwindCSS · Firebase</span>
-          </div>
+    <!-- Anniime Finder -->
+    <article class="web-card">
+      <div class="web-image">
+        <img
+          src="images/anniime/home-light.jpg"
+          alt="Anniime Finder discovery interface"
+          loading="lazy"
+        />
+        <span class="web-tag">Product Design · Onboarding UX</span>
+      </div>
 
-          <!-- MODAL trigger -->
-          <a href="#" class="btn-web" data-project="inkspression">View Case Study</a>
-        </div>
-      </article>
+      <div class="web-content">
+        <h3>Anniime Finder</h3>
+        <p class="mb-2">
+          A guided anime discovery tool that reduces decision fatigue for new viewers
+          through structured onboarding and curated recommendations.
+        </p>
 
-      <!-- Featured 2 -->
-      <article class="web-card">
-        <div class="web-image">
-          <img
-            src="images/anniime/home-light.jpg"
-            alt="Anime Finder home page preview"
-            loading="lazy"
-          />
-          <span class="web-tag">Front-End · Onboarding UX</span>
-        </div>
-
-        <div class="web-content">
-          <h3>Anime Finder</h3>
-          <p class="mb-2">
-            An anime discovery flow that reduces decision fatigue through a guided quiz, curated results,
-            and mood-based recommendation logic.
-          </p>
-
-          <div class="web-meta">
-            <span><strong>Role:</strong> UX flow + front-end implementation</span><br />
-            <span><strong>Tools:</strong> React · JavaScript · Jikan API</span>
-          </div>
-
-          <!-- MODAL trigger -->
-          <a href="#" class="btn-web" data-project="anniime">View Case Study</a>
-        </div>
-      </article>
-
-      <!-- Featured 3 -->
-      <article class="web-card">
-        <div class="web-image">
-          <img
-            src="images/inkspresso/dashboard.png"
-            alt="Inkspresso dashboard preview"
-            loading="lazy"
-          />
-          <span class="web-tag">Full-Stack · IA + System Design</span>
+        <div class="web-meta">
+          <span><strong>Role:</strong> UX/Product Design + Front-End</span><br />
+          <span><strong>Tools:</strong> React · JavaScript · Jikan API</span>
         </div>
 
-        <div class="web-content">
-          <h3>Inkspresso <small class="text-muted">— Fuel Your Imagination</small></h3>
-          <p class="mb-2">
-            A cozy café-inspired eCommerce + digital library concept, designed for calm browsing and longer sessions
-            (café mode + library mode).
-          </p>
+        <a href="#" class="btn-web" data-project="anniime">View Case Study</a>
+      </div>
+    </article>
 
-          <div class="web-meta">
-            <span><strong>Role:</strong> UX, IA, UI, full-stack build</span><br />
-            <span><strong>Tools:</strong> Node.js · Express · MongoDB</span>
-          </div>
+    <!-- Inkspresso -->
+    <article class="web-card">
+      <div class="web-image">
+        <img
+          src="images/inkspresso/dashboard.png"
+          alt="Inkspresso dashboard preview"
+          loading="lazy"
+        />
+        <span class="web-tag">Full-Stack · IA + Systems</span>
+      </div>
 
-          <!-- MODAL trigger -->
-          <a href="#" class="btn-web" data-project="inkspresso">View Case Study</a>
+      <div class="web-content">
+        <h3>Inkspresso — Fuel Your Imagination</h3>
+        <p class="mb-2">
+          A cozy café-inspired eCommerce and digital library concept designed for
+          calm browsing and exploration-first navigation.
+        </p>
+
+        <div class="web-meta">
+          <span><strong>Role:</strong> UX, IA, UI, Full-Stack Build</span><br />
+          <span><strong>Tools:</strong> Node.js · Express · MongoDB</span>
         </div>
-      </article>
-    </div>
-  </section>
+
+        <a href="#" class="btn-web" data-project="inkspresso">View Case Study</a>
+      </div>
+    </article>
+
+  </div>
+</section>
+
 
   <!-- =====================================================
        2) VISUAL DESIGN & BRAND EXPLORATIONS
