--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Ace Chianni | UX/UI Designer for Wellness & Human-Centered Products</title>
+<title>Ace Chianni | UX/UI & Product Designer</title>
 
   <meta
     name="description"
-    content="Ace Chianni is a UX/UI & Product Designer creating calm, accessible digital experiences for wellness and mental health products."
-  />
+    content="Ace Chianni is a UX/UI & Product Designer creating clear, accessible, and human-centered digital experiences across web and product design."
+
   <meta
     name="keywords"
     content="UX Designer, UI Designer, Product Designer, Wellness UX, Mental Health UX, Accessibility, Portfolio, Ace Chianni"
@@ -34,15 +34,15 @@
   <!-- HERO -->
   <header class="hero" role="banner">
     <div class="container-narrow">
-      <p class="hero-eyebrow">UX/UI • Product Design • Holistic Health & Wellness</p>
+<p class="hero-eyebrow">UX/UI • Product Design • Human-Centered Design</p>
 
-      <h1 class="hero-title">Calm digital experiences for real human needs.</h1>
+      <h1 class="hero-title">Designing clear, thoughtful digital experiences for real human needs.</h1>
 
       <p class="hero-subtitle">
-        I’m <strong>Ace Chianni</strong>, a UX/UI &amp; Product Designer blending psychology, accessibility,
-        and visual storytelling to reduce overwhelm, support focus, and create gentle user flows —
-        especially for wellness and mission-driven products.
-      </p>
+I’m <strong>Ace Chianni</strong>, a UX/UI & Product Designer with a background in psychology and frontend development. 
+I design accessible, intuitive interfaces that reduce friction, support user focus, and translate cleanly into development.
+</p>
+
 
       <!--  primary CTA + supporting text links -->
       <div class="hero-actions">
@@ -55,7 +55,7 @@
         <span class="badge rounded-pill text-bg-light px-3 py-2">Product UX</span>
         <span class="badge rounded-pill text-bg-light px-3 py-2">Accessibility-first</span>
         <span class="badge rounded-pill text-bg-light px-3 py-2">Design Systems</span>
-        <span class="badge rounded-pill text-bg-light px-3 py-2">Frontend-aware</span>
+        <span class="badge rounded-pill text-bg-light px-3 py-2">Frontend Collaboration</span>
       </div>
     </div>
   </header>
@@ -166,11 +166,12 @@
       <h2>How I design</h2>
 
       <ul>
-        <li><strong>Clarity first:</strong> simple hierarchy, fewer choices, calmer flows.</li>
-        <li><strong>Accessibility as baseline:</strong> readable type, predictable patterns, inclusive defaults.</li>
-        <li><strong>Emotion-aware UX:</strong> designing for overwhelm, transitions, and real-life attention limits.</li>
-        <li><strong>Build-ready thinking:</strong> components, states, and systems that translate cleanly to dev.</li>
-      </ul>
+  <li><strong>Clarity first:</strong> strong hierarchy and reduced friction.</li>
+  <li><strong>Accessibility baseline:</strong> readable type, inclusive patterns.</li>
+  <li><strong>User-focused decisions:</strong> grounded in psychology and usability.</li>
+  <li><strong>Build-ready thinking:</strong> components and systems that translate to dev.</li>
+</ul>
+
 
       <!--  CTAs -->
       <div class="homepage-actions">
